trunk/Archive2/31/acb5b670254167/output
clang c11
main.cpp:7:7: error: incompatible pointer types assigning to 'int *' from 'char *' [-Werror,-Wincompatible-pointer-types]
    j = &k;
      ^ ~~
1 error generated.

